--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,5 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID=c4a2258775d743b39ad2530f12129b1c
+CLIENT_SECRET=3a0fc1c006c64f48a2e5af4a8f8bc290
