Iterations done (5 does not work anymore?)

--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,2 @@
-# the Spotify api key and secret should be saved in this file, 
-# so when ready uncomment following lines and add them
-
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID = 5d0a47cd42b249489db78abb2207206d
+CLIENT_SECRET = ac659889eabb42a4beac2d94ad330a4f
