--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,4 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
-
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID=7554acde5a534ac1afa1d961030a982e
+CLIENT_SECRET=b113515a69fd4baa9d65a783246b7180
