--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,5 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID=e7656b5330c5430cba058116fcbb7668
+CLIENT_SECRET=57d69aab66e84250b8b446701de0d0f9
