--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,6 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID= cb282f48f97c4df8b06b9492feca02ec
+CLIENT_SECRET= ef375edf588942a4afb78fca2277af93
+
