missing styles, diplay artists and it5

--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,7 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+ CLIENT_ID= bc02011a43654d659ed038978b4c1f3b
+ CLIENT_SECRET= 716550d919cf4361b02ef9c040d2847d
+
+
