I'll finish it home

--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,4 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
-
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID=f2199383cc5c49afbd5846205b5a48fe
+CLIENT_SECRET=ceabc537a4164a84b19d8bda7904cf80
