--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,5 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+ CLIENT_ID= 59ff35b9bda5479ebcfe1c6808ccd2ac
+ CLIENT_SECRET= 3ad6f107bbc4486aaf50a52ab7d26165
