--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,5 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID= d6dbc1abf4114b3b954f64c063f0169c
+CLIENT_SECRET= 3a3f9d17c0234fa5917792777acd170c
