--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,5 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID= 7763cc7c90dc48fc81e90bef9b13c52c
+CLIENT_SECRET= b2bd6f240fbd41efa44d6369d6a1792c
