--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,5 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID=afa1457f4cd64bfdb9f70ee0441776e6
+CLIENT_SECRET=7393b3e482174db7aa2fc8b14fcb7292
