--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,7 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+
+CLIENT_ID=73f2f02b7acc4c61a6155e60ad320f8d
+
+CLIENT_SECRET=85373fae96f24deeac37643d4f107fca
