logic done, need to add style

--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,5 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
 
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID=0bb8a40c1b05462d87227df7ca354ac4
+CLIENT_SECRET=c55fb2dbc91e45a5980c03ce9fdd635c
