done all iterations. Just missing some style

--- a/starter_code/.env
+++ b/starter_code/.env
@@ -1,5 +1,4 @@
 # the Spotify api key and secret should be saved in this file, 
 # so when ready uncomment following lines and add them
-
-# CLIENT_ID= your clientId goes here
-# CLIENT_SECRET= your clientSecret goes here
+CLIENT_ID=05db73f4ecde4f4b97481887dd010a84
+CLIENT_SECRET=85dcbba17c9146febf877cb2faaba8f9
