--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "hbs": "^4.1.0",
+    "spotify-web-api-node": "^4.0.0"
   }
 }
